[package]
name = "gw-bin"
description = "Watch git repositories, pull changes and run commands on the new files"
version = "0.3.0"
license = "MIT"
edition = "2021"
documentation = "https://github.com/daniel7grant/gw"
repository = "https://github.com/daniel7grant/gw"

[dependencies]
dirs = "5.0.1"
duct_sh = "0.13.7"
duration-string = "0.3.0"
git2 = "0.18.1"
gumdrop = "0.8.1"
log = "0.4.20"
mockall = "0.12.1"
signal-hook = "0.3.17"
simple_logger = "4.3.3"
thiserror = "1.0.56"
tiny_http = "0.12.0"

[target.'cfg(target_env = "musl")'.dependencies]
git2 = { version = "0.18.1", features = ["vendored-libgit2", "vendored-openssl"] }

[target.arm-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[dev-dependencies]
duct = "0.13.7"
rand = "0.8.5"
ureq = { version = "2.9.1", default-features = false }

[profile.release]
strip = true

[[bin]]
name = "gw"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
