[package]
name = "gw-bin"
description = "Watch git repositories, pull changes and run commands on the new files"
version = "0.4.0"
license = "MIT"
edition = "2021"
documentation = "https://github.com/daniel7grant/gw"
repository = "https://github.com/daniel7grant/gw"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[dependencies]
dirs = "5.0.1"
duct = "0.13.7"
duct_sh = "0.13.7"
duration-string = "0.4.0"
git2 = "0.19.0"
gumdrop = "0.8.1"
libgit2-sys = "0.17.0"
log = "0.4.20"
mockall = "0.13.0"
nix = { version = "0.29.0", features = ["signal"] }
shlex = "1.3.0"
signal-hook = "0.3.17"
simplelog = "0.12.2"
thiserror = "2.0.3"
time = "0.3.37"
tiny_http = "0.12.0"

[target.'cfg(any(target_env = "musl", target_arch = "arm", target_arch = "aarch64"))'.dependencies]
git2 = { version = "0.19.0", features = ["vendored-libgit2", "vendored-openssl"] }

[dev-dependencies]
duct = "0.13.7"
rand = "0.8.5"
testing_logger = "0.1.1"
ureq = { version = "2.9.1", default-features = false }

[profile.release]
strip = true

[[bin]]
name = "gw"
path = "src/main.rs"
