[package]
name = "gw-bin"
description = "Watch git repositories, pull changes and run commands on the new files"
version = "0.4.1"
license = "MIT"
edition = "2021"
documentation = "https://github.com/daniel7grant/gw"
repository = "https://github.com/daniel7grant/gw"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[dependencies]
dirs = "6"
duct = "1.0.0"
duct_sh = "1.0.0"
duration-string = "0.5.2"
git2 = "0.20.0"
gumdrop = "0.8.1"
log = "0.4.20"
mockall = "0.13.0"
nix = { version = "0.30.1", features = ["signal"] }
shlex = "1.3.0"
signal-hook = "0.3.17"
simplelog = "0.12.2"
thiserror = "2.0.3"
time = "0.3.36"
tiny_http = "0.12.0"

[target.'cfg(any(target_env = "musl", target_arch = "arm", target_arch = "aarch64"))'.dependencies]
git2 = { version = "0.20.0", features = ["vendored-libgit2", "vendored-openssl"] }

[dev-dependencies]
duct = "1.0.0"
rand = "0.9.0"
testing_logger = "0.1.1"
ureq = { version = "3.0.5", default-features = false }

[profile.release]
strip = true

[[bin]]
name = "gw"
path = "src/main.rs"
